--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,11 @@
     "browser": true,
     "es2021": true
   },
-  "extends": "plugin:react/recommended",
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -11,19 +15,20 @@
     "sourceType": "module",
     "ecmaFeatures": {
       "jsx": true
+    }
+    
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
     },
-    "settings": {
-      "react": {
-        "version": "detect"
-      },
-      "import/resolver": {
-        "node": {
-          "paths": ["src"],
-          "extensions": [".js", ".jsx", ".ts", ".tsx"]
-        }
+    "import/resolver": {
+      "node": {
+        "paths": ["src"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     }
   },
   "plugins": ["react", "@typescript-eslint"],
-  "rules": {}
+  "rules": {"@typescript-eslint/no-explicit-any": "off"}
 }
